--- a/FirstAssignment/HomeWorks.html
+++ b/FirstAssignment/HomeWorks.html
@@ -6,7 +6,7 @@
 <body style="background-color : #fffa9e">
 <p style="font-size:20px; text-align:center;">CPIT 405 Homeworks</P>
 <h2>
-  <a href="Homework1.html" 
+  <a href="homework1.html" 
    style="text-decoration: none">Homework#1</a>
 </h2>
 <h2>
