--- a/First-Assignment/HomeWorks.html
+++ b/First-Assignment/HomeWorks.html
@@ -11,9 +11,12 @@
 </h2>
 <h2>
   <a href="smallquiz2.html" 
-   style="text-decoration: none">Small Quiz#2 <br><br></a>
+   style="text-decoration: none">Small Quiz#2 </a>
 </h2>
-
+<h2>
+  <a href="Second-Assignment/N_Day.html" 
+   style="text-decoration: none">Natoinal Day Assignment <br><br></a>
+</h2>
 
 <p><a href="CV.html">
 <img src="home.png" alt="homepage" width="100" height="132">
