--- a/First-Assignment/HomeWorks.html
+++ b/First-Assignment/HomeWorks.html
@@ -14,7 +14,7 @@
    style="text-decoration: none">Small Quiz#2 </a>
 </h2>
 <h2>
-  <a href="Second-Assignment/N_Day.html" 
+  <a href="https://ahmedsuwayni.github.io/CPIT-405/Second-Assignment/N_Day.html" 
    style="text-decoration: none">Natoinal Day Assignment <br><br></a>
 </h2>
 
